--- a/templates/404.html
+++ b/templates/404.html
@@ -21,9 +21,11 @@
                 <!-- /wp:heading -->
 
                 <!-- wp:paragraph -->
-                <p>The page you are looking for does not exist, or it has been moved (see <a
-                        href="https://datatracker.ietf.org/doc/html/rfc9110#section-15.5.5" target="_blank"
-                        rel="noreferrer noopener">Section 15.5.5. of HTTP Semantics</a>).</p>
+                <p>The Server has initiated the proceeding to locate the requested document. After adjudication, the
+                    Server found reason to believe that the stipulated document does not exist or has been moved
+                    pursuant to <a href="https://datatracker.ietf.org/doc/html/rfc9110#section-15.5.5" target="_blank"
+                        rel="noreferrer noopener">9110 RFC &sect; 15.5.5</a>. The Server has represented that no
+                    malicious intent can be attributed to its operations or protocols in this matter.</p>
                 <!-- /wp:paragraph -->
             </main>
 
