--- a/templates/404.html
+++ b/templates/404.html
@@ -16,8 +16,8 @@
             <!-- wp:group {"tagName":"main"} -->
 
             <main class="wp-block-group">
-                <!-- wp:heading -->
-                <h2 class="wp-block-heading">Page not found</h2>
+                <!-- wp:heading {"level":1} -->
+                <h1 class="wp-block-heading">Page not found</h1>
                 <!-- /wp:heading -->
 
                 <!-- wp:paragraph -->
