--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
 <div class="wp-block-group alignwide">
     <!-- wp:columns {"align":"wide"} -->
     <div class="wp-block-columns alignwide">
+
         <!-- wp:column {"width":"30%"} -->
         <div class="wp-block-column" style="flex-basis:30%">
             <!-- wp:template-part {"slug":"sidebar","tagName":"aside"} /-->
@@ -15,17 +16,16 @@
             style="padding-top:0px;padding-right:0px;padding-bottom:0px;padding-left:0px;flex-basis:70%">
             <!-- wp:group {"tagName":"main"} -->
             <main class="wp-block-group">
-
                 <!-- wp:heading {"level":1} -->
                 <h1 class="wp-block-heading">News</h1>
                 <!-- /wp:heading -->
 
-                <!-- wp:pattern {"slug":"stewart/posts-list"} /-->
-
+                <!-- wp:pattern {"slug":"ftcunion-stewart/posts-list"} /-->
             </main>
             <!-- /wp:group -->
         </div>
         <!-- /wp:column -->
+
     </div>
     <!-- /wp:columns -->
 </div>
