--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
             <!-- wp:group {"tagName":"main"} -->
             <main class="wp-block-group">
                 <!-- wp:heading {"level":1} -->
-                <h1 class="wp-block-heading">News &amp; Announcements</h1>
+                <h1 class="wp-block-heading">News &amp; Events</h1>
                 <!-- /wp:heading -->
 
                 <!-- wp:pattern {"slug":"ftcunion-stewart/posts-list-noexcerpt"} /-->
