--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /*
 Theme Name: FTC Union Stewart
-Theme URI: 
+Theme URI: https://github.com/ftcunion/ftcunion-stewart
 Author: Matthew W. Thomas
 Author URI: https://www.matthewthom.as
 Description: Child theme of Stuart
 Requires at least: 6.1
-Tested up to: 6.1
-Requires PHP: 5.7
+Tested up to: 6.7.2
+Requires PHP: 7.0
 Version: 2.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
