--- a/style.css
+++ b/style.css
@@ -14,3 +14,86 @@ Template: stewart
 Text Domain: ftcunion-stewart
 Tags: two-columns, custom-colors, custom-menu, custom-logo, editor-style, featured-images, full-site-editing, block-patterns, rtl-language-support, sticky-post, threaded-comments
 */
+
+/* Stable scrollbar */
+:root {
+    scrollbar-gutter: stable;
+}
+
+/* Font metrics */
+body {
+    font-size-adjust: cap-height 0.738;
+}
+
+/* Stretch Footer */
+html,
+body {
+    height: 100%;
+}
+
+.wp-site-blocks {
+    overflow-y: hidden;
+    min-height: 100%;
+}
+
+footer {
+    padding-bottom: 100vh;
+    margin-block-end: -100vh !important;
+    box-shadow: inset 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+    margin-top: 2.75rem;
+}
+
+/* Scale pattern */
+.scale-pattern,
+footer {
+    background-image: url('./assets/images/scale-pattern-svgo.svg');
+    background-size: 5.5rem;
+}
+
+@media(max-width: 599px) {
+
+    /* Hide some nav elements on mobile */
+    header .wp-block-spacer {
+        display: none;
+    }
+
+    .mobile-flex~.wp-block-separator {
+        margin-block-start: 0;
+    }
+
+    .mobile-flex {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .mobile-hide {
+        display: none;
+    }
+
+    /* Adjust nav padding */
+    nav>.wp-block-navigation__responsive-container.is-menu-open {
+        padding-top: 2.3rem;
+    }
+
+    header+.wp-block-group {
+        margin-top: 0;
+    }
+
+    /* Special mobile nav logo */
+    .wp-block-site-title a {
+        display: inline-block;
+        overflow: clip;
+        white-space: nowrap;
+        margin: 0;
+        padding: 0;
+    }
+
+    .wp-block-site-title a::before {
+        content: url('./assets/images/site-title-svgo.svg');
+        font-size: 0;
+        line-height: 0;
+    }
+}
