--- a/style.css
+++ b/style.css
@@ -43,6 +43,21 @@ footer {
     margin-top: 2.75rem;
 }
 
+/* Special nav logo */
+.wp-block-site-title a {
+    display: inline-block;
+    overflow: clip;
+    white-space: nowrap;
+    margin: 0;
+    padding: 0;
+}
+
+.wp-block-site-title a::before {
+    content: url('./assets/images/site-title-svgo.svg');
+    font-size: 0;
+    line-height: 0;
+}
+
 /* Scale pattern */
 .scale-pattern,
 footer {
@@ -82,18 +97,9 @@ footer {
         margin-top: 0;
     }
 
-    /* Special mobile nav logo */
-    .wp-block-site-title a {
-        display: inline-block;
-        overflow: clip;
-        white-space: nowrap;
-        margin: 0;
-        padding: 0;
+    /* Fix spacing of title when there is no logo */
+    .wp-block-site-title {
+        margin-block-start: var(--wp--style--block-gap);
     }
 
-    .wp-block-site-title a::before {
-        content: url('./assets/images/site-title-svgo.svg');
-        font-size: 0;
-        line-height: 0;
-    }
 }
