--- a/style.css
+++ b/style.css
@@ -66,7 +66,12 @@ footer {
     background-size: 5.5rem;
 }
 
-@media(max-width: 599px) {
+/* Member banner same height as header */
+.ftcunion-member-banner {
+    min-height: 70px;
+}
+
+@media(width < 600px) {
 
     /* Hide some nav elements on mobile */
     header .wp-block-spacer {
@@ -103,4 +108,8 @@ footer {
         margin-block-start: var(--wp--style--block-gap) !important;
     }
 
+    /* Unset min-height on member banner */
+    .ftcunion-member-banner {
+        min-height: unset;
+    }
 }
