--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Description: Child theme of Stuart
 Requires at least: 6.1
 Tested up to: 6.8.1
 Requires PHP: 7.0
-Version: 4.2.3
+Version: 4.2.4
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Template: stewart
@@ -77,6 +77,7 @@ form[action$="/union-access.php"] .input-group {
     padding: 1px;
     font-size: var(--wp--preset--font-size--normal);
     overflow-x: clip;
+    margin-bottom: 0.5em;
 }
 
 form[action$="/union-access.php"] .input-group input[type="email"] {
