add light dark mode buttons
Update style.min.css

--- a/style.css
+++ b/style.css
@@ -222,8 +222,8 @@ body.ftcunion-dark .wp-social-link-ftcunion-social-link-dark {
 }
 
 :root:has(body.ftcunion-dark) {
-    --wp--preset--color--text: #fff;
-    --wp--preset--color--foreground: #b3c8e6;
+    --wp--preset--color--text: #e8e8e8;
+    --wp--preset--color--foreground: #fff;
     --wp--preset--color--background: #000;
     --wp--preset--color--primary: #bbc0c9;
     --wp--preset--color--secondary: #88c2fb;
