--- a/style.css
+++ b/style.css
@@ -213,15 +213,15 @@ form[action$="/union-access.php"] button:focus {
 }
 
 /* Light and Dark Mode Toggle */
-body:not(.ftcunion-dark) .wp-social-link-ftcunion-social-link-light {
+:root:not(.ftcunion-dark) .wp-social-link-ftcunion-social-link-light {
     display: none !important;
 }
 
-body.ftcunion-dark .wp-social-link-ftcunion-social-link-dark {
+:root.ftcunion-dark .wp-social-link-ftcunion-social-link-dark {
     display: none !important;
 }
 
-:root:has(body.ftcunion-dark) {
+:root.ftcunion-dark {
     --wp--preset--color--text: #eee;
     --wp--preset--color--foreground: #fff;
     --wp--preset--color--background: #000;
@@ -230,6 +230,6 @@ body.ftcunion-dark .wp-social-link-ftcunion-social-link-dark {
     --wp--preset--color--tertiary: #eb9c99;
 }
 
-body.ftcunion-dark .wp-block-site-title a::before {
+:root.ftcunion-dark .wp-block-site-title a::before {
     content: url('./assets/images/site-title-simplified-inverse-svgo.svg');
 }
