--- a/style.css
+++ b/style.css
@@ -160,6 +160,11 @@ form[action$="/union-access.php"] button:focus {
         margin-top: 0;
     }
 
+    /* Adjust spacing of social icons */
+    :root .is-layout-flow>.wp-block-social-links {
+        margin-block-start: 0.6rem;
+    }
+
     /* Fix spacing of title when there is no logo */
     .wp-block-site-title {
         margin-block-start: var(--wp--style--block-gap) !important;
