--- a/style.css
+++ b/style.css
@@ -229,12 +229,12 @@ form[action$="/union-access.php"] button:focus {
 }
 
 :root.ftcunion-dark {
-    --wp--preset--color--text: #ebebeb;
-    --wp--preset--color--foreground: #fff;
+    --wp--preset--color--text: #dfdfdf;
+    --wp--preset--color--foreground: #f1f1f1;
     --wp--preset--color--background: #000;
-    --wp--preset--color--primary: #ca5d3f;
-    --wp--preset--color--secondary: #4f88e3;
-    --wp--preset--color--tertiary: #e7363f; 
+    --wp--preset--color--primary: #ffa057;
+    --wp--preset--color--secondary: #70B8FF;
+    --wp--preset--color--tertiary: #e5484d;
 }
 
 :root.ftcunion-dark .wp-block-site-title a::before {
